--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -33,11 +34,12 @@
     "react": "^18",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
     "tempo-devtools": "^2.0.99",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^20",
