--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -89,6 +89,12 @@ file_size_limit = "50MiB"
 # [storage.image_transformation]
 # enabled = true
 
+# Configure storage buckets
+[storage.buckets.session-images]
+public = true
+file_size_limit = "10MiB"
+allowed_mime_types = ["image/png", "image/jpeg", "image/gif", "image/webp"]
+
 # Uncomment to configure local storage buckets
 # [storage.buckets.images]
 # public = false
